fixed main container width on mobile and updated info

--- a/css/styles.css
+++ b/css/styles.css
@@ -105,7 +105,7 @@ body a.project {
   }
 
   body .content {
-    max-width: 80%;
+    width: 95%;
     margin-top: 10%;
     margin-bottom: 10%;
   }
